--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ def allureVersion = "2.18.1",
     selenideVersion = "6.6.6",
     restAssuredVersion = "5.1.1",
     appiumVersion = "8.1.1",
-//    appiumVersion = "7.6.0",
     slf4jVersion = "1.7.32",
+    ownerVersion = "1.0.12",
     junitVersion = "5.9.0"
 
 allure {
@@ -37,6 +37,7 @@ dependencies {
             "io.qameta.allure:allure-rest-assured:$allureVersion",
             "io.appium:java-client:$appiumVersion",
             "org.slf4j:slf4j-simple:$slf4jVersion",
+            "org.aeonbits.owner:owner:$ownerVersion",
             "org.junit.jupiter:junit-jupiter:$junitVersion"
     )
 }
